refactor: host functions