@@ -11,75 +11,47 @@ import java.util.List;
 public class ChildStorageHostFunctions {
 
     public static List<ImportObject> getFunctions() {
-        return Arrays.asList(new ImportObject.FuncImport("env", "ext_default_child_storage_set_version_1", argv -> {
-                    System.out.println("Message printed in the body of 'ext_default_child_storage_set_version_1'");
-                    return argv;
-                }, List.of(Type.I64, Type.I64, Type.I64), List.of()),
-                new ImportObject.FuncImport("env",
+        return Arrays.asList(
+                HostFunctions.getImportObject("ext_default_child_storage_set_version_1", argv -> {
+                    return HostFunctions.EMPTY_LIST_OF_NUMBER;
+                }, List.of(Type.I64, Type.I64, Type.I64)),
+                HostFunctions.getImportObject(
                         "ext_default_child_storage_get_version_1", argv -> {
-                    System.out.println("Message printed in the body of 'ext_default_child_storage_get_version_1'");
                     return argv;
-                }, List.of(Type.I64, Type.I64), List.of(Type.I64)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_read_version_1", argv -> {
-                    System.out.println("Message printed in the body of 'ext_default_child_storage_read_version_1'");
+                }, List.of(Type.I64, Type.I64), Type.I64),
+                HostFunctions.getImportObject("ext_default_child_storage_read_version_1", argv -> {
                     return argv;
-                }, List.of(Type.I64, Type.I64, Type.I64, Type.I32), List.of(Type.I64)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_clear_version_1", argv -> {
-                    System.out.println("Message printed in the body of 'ext_default_child_storage_clear_version_1'");
+                }, List.of(Type.I64, Type.I64, Type.I64, Type.I32), Type.I64),
+                HostFunctions.getImportObject("ext_default_child_storage_clear_version_1", argv -> {
+                    return HostFunctions.EMPTY_LIST_OF_NUMBER;
+                }, List.of(Type.I64, Type.I64)),
+                HostFunctions.getImportObject("ext_default_child_storage_storage_kill_version_1", argv -> {
+                    return HostFunctions.EMPTY_LIST_OF_NUMBER;
+                }, List.of(Type.I64)),
+                HostFunctions.getImportObject("ext_default_child_storage_storage_kill_version_2", argv -> {
                     return argv;
-                }, List.of(Type.I64, Type.I64), List.of()),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_storage_kill_version_1", argv -> {
-                    System.out.println("Message printed in the body of " +
-                            "'ext_default_child_storage_storage_kill_version_1'");
+                }, List.of(Type.I64, Type.I64), Type.I32),
+                HostFunctions.getImportObject("ext_default_child_storage_storage_kill_version_3", argv -> {
                     return argv;
-                }, List.of(Type.I64), List.of()),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_storage_kill_version_2", argv -> {
-                    System.out.println("Message printed in the body of " +
-                            "'ext_default_child_storage_storage_kill_version_2'");
+                }, List.of(Type.I64, Type.I64), Type.I64),
+                HostFunctions.getImportObject("ext_default_child_storage_exists_version_1", argv -> {
                     return argv;
-                }, List.of(Type.I64, Type.I64), List.of(Type.I32)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_storage_kill_version_3", argv -> {
-                    System.out.println("Message printed in the body of " +
-                            "'ext_default_child_storage_storage_kill_version_3'");
+                }, List.of(Type.I64, Type.I64), Type.I32),
+                HostFunctions.getImportObject("ext_default_child_storage_clear_prefix_version_1", argv -> {
                     return argv;
-                }, List.of(Type.I64, Type.I64), List.of(Type.I64)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_exists_version_1", argv -> {
-                    System.out.println("Message printed in the body of 'ext_default_child_storage_exists_version_1'");
+                }, List.of(Type.I64), Type.I64),
+                HostFunctions.getImportObject("ext_default_child_storage_clear_prefix_version_2", argv -> {
                     return argv;
-                }, List.of(Type.I64, Type.I64), List.of(Type.I32)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_clear_prefix_version_1", argv -> {
-                    System.out.println("Message printed in the body of " +
-                            "'ext_default_child_storage_clear_prefix_version_1'");
+                }, List.of(Type.I64, Type.I64, Type.I64), Type.I64),
+                HostFunctions.getImportObject("ext_default_child_storage_root_version_1", argv -> {
                     return argv;
-                }, List.of(Type.I64), List.of(Type.I64)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_clear_prefix_version_2", argv -> {
-                    System.out.println("Message printed in the body of " +
-                            "'ext_default_child_storage_clear_prefix_version_2'");
+                }, List.of(Type.I64), Type.I64),
+                HostFunctions.getImportObject("ext_default_child_storage_root_version_2", argv -> {
                     return argv;
-                }, List.of(Type.I64, Type.I64, Type.I64), List.of(Type.I64)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_root_version_1", argv -> {
-                    System.out.println("Message printed in the body of 'ext_default_child_storage_root_version_1'");
+                }, List.of(Type.I64, Type.I32), Type.I64),
+                HostFunctions.getImportObject("ext_default_child_storage_next_key_version_1", argv -> {
                     return argv;
-                }, List.of(Type.I64), List.of(Type.I64)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_root_version_2", argv -> {
-                    System.out.println("Message printed in the body of 'ext_default_child_storage_root_version_2'");
-                    return argv;
-                }, List.of(Type.I64, Type.I32), List.of(Type.I64)),
-                new ImportObject.FuncImport("env",
-                        "ext_default_child_storage_next_key_version_1", argv -> {
-                    System.out.println("Message printed in the body of 'ext_default_child_storage_next_key_version_1'");
-                    return argv;
-                }, List.of(Type.I64, Type.I64), List.of(Type.I64)));
+                }, List.of(Type.I64, Type.I64), Type.I64));
     }
 
 }
